--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "@testing-library/dom": "^9.3.0"
   }
 }
