--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^29.5.0"
   },
   "dependencies": {
-    "@testing-library/dom": "^9.3.0"
+    "@testing-library/dom": "^9.3.0",
+    "jsdom": "^22.0.0"
   }
 }
